Fix calendar table overflow scroll

--- a/web/css/frontend/_layouts/main.css
+++ b/web/css/frontend/_layouts/main.css
@@ -223,11 +223,11 @@ hr {
 	position: relative;
 	background: #d4dadd; }
 .wy-slider {
-	max-height: 250px;
+	max-height: 350px;
  	background: #292f33; }
 .wy-slider__slide {
 	position: relative;
- 	max-height: 250px;
+ 	max-height: 350px;
 	-webkit-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out; }
 	@media screen and (min-width: 650px) and (max-width: 1023px) {
