--- a/web/css/frontend/_partials/calendar.css
+++ b/web/css/frontend/_partials/calendar.css
@@ -206,12 +206,11 @@
   overflow: hidden; }
 .wy-body table {
   width: 100%;
-  min-width: 750px;
+  min-width: 720px;
   margin-bottom: 1.2em;
   border-collapse: collapse;
   table-layout: fixed;
-  border: 1px solid rgba(0,0,0,0.1);
-  overflow: auto; }
+  border: 1px solid rgba(0,0,0,0.1); }
 .wy-body tr {
   border-bottom: 1px solid rgba(0,0,0,0.1); }
 .wy-body thead {
@@ -229,7 +228,8 @@
 .wy-body th,
 .wy-body td {
   padding:0.7em;
-  width: 100%; }
+  width: 100%;
+  min-width: 200px; }
 .wy-body th:first-child,
 .wy-body td:first-child {
   width: 150px; }
